--- a/about-us.html
+++ b/about-us.html
@@ -91,7 +91,7 @@
                                         <ul class="single-mega cn-col-4">
                                             <li class="title">GRAPHIC DESIGN AND PRINTING</li>
                                             <li><a href="/promotional">Promotional Item Printing</a></li>
-                                            <li><a href="#">Logo Design</a></li>
+                                            <li><a href="/logo">Logo Design</a></li>
                                             <li><a href="/promotional">Company Branding</a></li>
                                             <li><a href="/promotional">General printing</a></li>
                                         </ul>
