--- a/construction.html
+++ b/construction.html
@@ -52,7 +52,7 @@
                 <nav class="classy-navbar justify-content-between" id="southNav">
 
                     <!-- Logo -->
-                    <a class="nav-brand" href="index.html"><img src="img/core-img/logo1.png" alt=""></a>
+                    <a class="nav-brand" href="https://elohayempire.org/"><img src="img/core-img/logo1.png" alt=""></a>
 
                     <!-- Navbar Toggler -->
                     <div class="classy-navbar-toggler">
@@ -67,50 +67,50 @@
                             <div class="cross-wrap"><span class="top"></span><span class="bottom"></span></div>
                         </div>
 
-                       <!-- Nav Start -->
+                      <!-- Nav Start -->
                         <div class="classynav">
                             <ul>
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="about-us.html">About Us</a></li>
+                                <li><a href="https://elohayempire.org/">Home</a></li>
+                                <li><a href="/about-us">About Us</a></li>
                                  <li><a href="#">Services</a>
                                     <div class="megamenu">
                                          <ul class="single-mega cn-col-4">
                                             <li class="title">CONSTRUCTIONS</li>
-                                            <li><a href="residential.html">Residential Houses</a></li>
-                                            <li><a href="flats.html">Rental Flats</a></li>
-                                            <li><a href="roads.html">Roads</a></li>
-                                            <li><a href="school.html">School & Churches</a></li>
+                                            <li><a href="/residential">Residential Houses</a></li>
+                                            <li><a href="/flats">Rental Flats</a></li>
+                                            <li><a href="/roads">Roads</a></li>
+                                            <li><a href="/school">School & Churches</a></li>
                                         </ul>
                                         <ul class="single-mega cn-col-4">
                                             <li class="title">SUPPLIES</li>
-                                            <li><a href="office.html">Office Stationaries</a></li>
-                                            <li><a href="construction.html">Constraction Materials</a></li>
-                                            <li><a href="promotional.html">Promotional Items</a></li>
-                                            <li><a href="schoolitems.html">School Items</a></li>
+                                            <li><a href="/office">Office Stationaries</a></li>
+                                            <li><a href="/construction">Constraction Materials</a></li>
+                                            <li><a href="/promotional">Promotional Items</a></li>
+                                            <li><a href="/schoolitems">School Items</a></li>
                                         </ul>
                                         <ul class="single-mega cn-col-4">
                                             <li class="title">GRAPHIC DESIGN AND PRINTING</li>
-                                            <li><a href="promotional.html">Promotional Item Printing</a></li>
-                                            <li><a href="#">Logo Design</a></li>
-                                            <li><a href="promotional.html">Company Branding</a></li>
-                                            <li><a href="promotional.html">General printing</a></li>
+                                            <li><a href="/promotional">Promotional Item Printing</a></li>
+                                            <li><a href="/logo">Logo Design</a></li>
+                                            <li><a href="/promotional">Company Branding</a></li>
+                                            <li><a href="/promotional">General printing</a></li>
                                         </ul>
                                         <ul class="single-mega cn-col-4">
                                             <li class="title">Gift & Community Services</li>
-                                            <li><a href="food.html">Food Distrubution</a></li>
-                                            <li><a href="food.html">Ophanage Visiting</a></li>
-                                            <li><a href="promotional.html">Branded T shirts</a></li>
-                                            <li><a href="promotional.html">Branded Gifts</a></li>
+                                            <li><a href="/food">Food Distrubution</a></li>
+                                            <li><a href="/food">Ophanage Visiting</a></li>
+                                            <li><a href="/promotional">Branded T shirts</a></li>
+                                            <li><a href="/promotional">Branded Gifts</a></li>
 
                                         </ul>
                                     </div>
                                 </li>
                                 
-                                <li><a href="expertise.html">Our Expertise</a></li>
-                                <li><a href="blog.html">Blog</a></li>
+                                <li><a href="/expertise">Our Expertise</a></li>
+                                <li><a href="/blog">Blog</a></li>
 
                                
-                                <li><a href="contact.html">Contact</a></li>
+                                <li><a href="/contact">Contact</a></li>
                             </ul>
 
                             <!-- Search Form -->
@@ -412,7 +412,7 @@
                             <div class="footer-logo my-4">
                                 <img src="img/core-img/logo1.png" alt="">
                             </div>
-                            <p>Elohay Empire Ltd is a registered business entity engaged in contracting and supply of a variety of....<a href="about-us.html">Read More</a>
+                            <p>Elohay Empire Ltd is a registered business entity engaged in contracting and supply of a variety of....<a href="/about-us">Read More</a>
                             </p>
                         </div>
                     </div>
