--- a/elements.html
+++ b/elements.html
@@ -70,67 +70,47 @@
                         <!-- Nav Start -->
                         <div class="classynav">
                             <ul>
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="#">Pages</a>
-                                    <ul class="dropdown">
-                                        <li><a href="index.html">Home</a></li>
-                                        <li><a href="about-us.html">About Us</a></li>
-                                        <li><a href="#">Listings</a>
-                                            <ul class="dropdown">
-                                                <li><a href="listings.html">Listings</a></li>
-                                                <li><a href="single-listings.html">Single Listings</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="#">Blog</a>
-                                            <ul class="dropdown">
-                                                <li><a href="blog.html">Blog</a></li>
-                                                <li><a href="single-blog.html">Single Blog</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="contact.html">Contact</a></li>
-                                        <li><a href="elements.html">Elements</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="about-us.html">About Us</a></li>
-                                <li><a href="listings.html">Properties</a></li>
-                                <li><a href="blog.html">Blog</a></li>
-                                <li><a href="#">Mega Menu</a>
+                                <li><a href="https://elohayempire.org/">Home</a></li>
+                                <li><a href="/about-us">About Us</a></li>
+                                 <li><a href="#">Services</a>
                                     <div class="megamenu">
-                                        <ul class="single-mega cn-col-4">
-                                            <li class="title">Headline 1</li>
-                                            <li><a href="#">Mega Menu Item 1</a></li>
-                                            <li><a href="#">Mega Menu Item 2</a></li>
-                                            <li><a href="#">Mega Menu Item 3</a></li>
-                                            <li><a href="#">Mega Menu Item 4</a></li>
-                                            <li><a href="#">Mega Menu Item 5</a></li>
+                                         <ul class="single-mega cn-col-4">
+                                            <li class="title">CONSTRUCTIONS</li>
+                                            <li><a href="/residential">Residential Houses</a></li>
+                                            <li><a href="/flats">Rental Flats</a></li>
+                                            <li><a href="/roads">Roads</a></li>
+                                            <li><a href="/school">School & Churches</a></li>
                                         </ul>
                                         <ul class="single-mega cn-col-4">
-                                            <li class="title">Headline 2</li>
-                                            <li><a href="#">Mega Menu Item 1</a></li>
-                                            <li><a href="#">Mega Menu Item 2</a></li>
-                                            <li><a href="#">Mega Menu Item 3</a></li>
-                                            <li><a href="#">Mega Menu Item 4</a></li>
-                                            <li><a href="#">Mega Menu Item 5</a></li>
+                                            <li class="title">SUPPLIES</li>
+                                            <li><a href="/office">Office Stationaries</a></li>
+                                            <li><a href="/construction">Constraction Materials</a></li>
+                                            <li><a href="/promotional">Promotional Items</a></li>
+                                            <li><a href="/schoolitems">School Items</a></li>
                                         </ul>
                                         <ul class="single-mega cn-col-4">
-                                            <li class="title">Headline 3</li>
-                                            <li><a href="#">Mega Menu Item 1</a></li>
-                                            <li><a href="#">Mega Menu Item 2</a></li>
-                                            <li><a href="#">Mega Menu Item 3</a></li>
-                                            <li><a href="#">Mega Menu Item 4</a></li>
-                                            <li><a href="#">Mega Menu Item 5</a></li>
+                                            <li class="title">GRAPHIC DESIGN AND PRINTING</li>
+                                            <li><a href="/promotional">Promotional Item Printing</a></li>
+                                            <li><a href="/logo">Logo Design</a></li>
+                                            <li><a href="/promotional">Company Branding</a></li>
+                                            <li><a href="/promotional">General printing</a></li>
                                         </ul>
                                         <ul class="single-mega cn-col-4">
-                                            <li class="title">Headline 4</li>
-                                            <li><a href="#">Mega Menu Item 1</a></li>
-                                            <li><a href="#">Mega Menu Item 2</a></li>
-                                            <li><a href="#">Mega Menu Item 3</a></li>
-                                            <li><a href="#">Mega Menu Item 4</a></li>
-                                            <li><a href="#">Mega Menu Item 5</a></li>
+                                            <li class="title">Gift & Community Services</li>
+                                            <li><a href="/food">Food Distrubution</a></li>
+                                            <li><a href="/food">Ophanage Visiting</a></li>
+                                            <li><a href="/promotional">Branded T shirts</a></li>
+                                            <li><a href="/promotional">Branded Gifts</a></li>
+
                                         </ul>
                                     </div>
                                 </li>
-                                <li><a href="contact.html">Contact</a></li>
+                                
+                                <li><a href="/expertise">Our Expertise</a></li>
+                                <li><a href="/blog">Blog</a></li>
+
+                               
+                                <li><a href="/contact">Contact</a></li>
                             </ul>
 
                             <!-- Search Form -->
