--- a/index.html
+++ b/index.html
@@ -728,15 +728,15 @@
                             </div>
                             <!-- Nav -->
                             <ul class="useful-links-nav d-flex align-items-center">
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">About us</a></li>
-                                <li><a href="#">Gifts</a></li>
-                                <li><a href="#">Services</a></li>
-                                <li><a href="#">Community Services</a></li>
-                                <li><a href="#">Supplies</a></li>
-                                <li><a href="#">Roads</a></li>
-                                <li><a href="#">House Construction</a></li>
-                                <li><a href="#">Contact</a></li>
+                                <li><a href="https://elohayempire.org/">Home</a></li>
+                                <li><a href="/about-us">About us</a></li>
+                                <li><a href="/promotional">Gifts</a></li>
+                                <li><a href="/expertise">Our Expertise</a></li>
+                                <li><a href="/food">Community Services</a></li>
+                                <li><a href="/schoolitems">Supplies</a></li>
+                                <li><a href="/roads">Roads</a></li>
+                                <li><a href="/construction">House Construction</a></li>
+                                <li><a href="/contact">Contact</a></li>
                                 <li><a href="#">FAQ</a></li>
                             </ul>
                         </div>
