--- a/about-us.html
+++ b/about-us.html
@@ -108,6 +108,7 @@
                                 
                                 <li><a href="/expertise">Our Expertise</a></li>
                                 <li><a href="/blog">Blog</a></li>
+                                <li><a href="/blog">E-Book</a></li>
 
                                
                                 <li><a href="/contact">Contact</a></li>
