--- a/food.html
+++ b/food.html
@@ -109,6 +109,7 @@
                                 
                                 <li><a href="/expertise">Our Expertise</a></li>
                                 <li><a href="/blog">Blog</a></li>
+                                <li><a href="#">E-Book</a></li>
 
                                
                                 <li><a href="/contact">Contact</a></li>
