--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,7 @@
                                 
                                 <li><a href="/expertise">Our Expertise</a></li>
                                 <li><a href="/blog">Blog</a></li>
-                                <li><a href="#">E-Book</a></li>
+                                 <li><a href="https://book.elohayempire.org/">E-Book</a></li>
 
                                
                                 <li><a href="/contact">Contact</a></li>
@@ -171,8 +171,8 @@
                         <!-- Address -->
                         <div class="address mt-30">
                             <h6><img src="img/icons/phone-call.png" alt="">+254 720 628 137</h6>
-                            <h6><img src="img/icons/envelope.png" alt="">info@kimanisankara.co.ke</h6>
-                            <h6><img src="img/icons/location.png" alt=""> Nairobi, Kenyatta Ave, DB house,<br> P.O Box 1234-00100.</h6>
+                            <h6><img src="img/icons/envelope.png" alt="">info@elohayempire.org</h6>
+                            <h6><img src="img/icons/location.png" alt="">AGIP HOUSE 2ND FLOOR,<br> ROOM 218.<br>P. O. BOX 66038 00800, NAIROBI, KENYA</h6>
                         </div>
                     </div>
                 </div>
@@ -182,13 +182,16 @@
                     <div class="contact-form">
                         <form action="messaging.php" method="post">
                             <div class="form-group">
-                                <input type="text" class="form-control" name="text" id="contact-name" placeholder="Your Name">
+                                <input type="text" class="form-control" name="name" id="contact-name" placeholder="Your Name">
                             </div>
                             <div class="form-group">
-                                <input type="number" class="form-control" name="number" id="contact-number" placeholder="Your Phone">
+                                <input type="number" class="form-control" name="telephone" id="contact-number" placeholder="Your Phone">
                             </div>
                             <div class="form-group">
                                 <input type="email" class="form-control" name="email" id="contact-email" placeholder="Your Email">
+                            </div>
+                            <div class="form-group">
+                                <input type="text" class="form-control" name="subj" id="contact-subj" placeholder="Message Subject">
                             </div>
                             <div class="form-group">
                                 <textarea class="form-control" name="message" id="message" cols="30" rows="10" placeholder="Your Message"></textarea>
