--- a/listings.html
+++ b/listings.html
@@ -108,8 +108,7 @@
                                 
                                 <li><a href="/expertise">Our Expertise</a></li>
                                 <li><a href="/blog">Blog</a></li>
-                                <li><a href="#">E-Book</a></li>
-
+                                 <li><a href="https://book.elohayempire.org/">E-Book</a></li>
                                
                                 <li><a href="/contact">Contact</a></li>
                             </ul>
