--- a/food.html
+++ b/food.html
@@ -18,6 +18,12 @@
     <!-- Style CSS -->
     <link rel="stylesheet" href="style.css">
 
+    <style>
+a:hover {
+  background-color: grey;
+}
+</style>
+
 </head>
 
 <body>
