--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -17,7 +17,14 @@
     <!-- Style CSS -->
     <link rel="stylesheet" href="style.css">
 
+    <style>
+a:hover {
+  background-color: grey;
+}
+</style>
+
 </head>
+
 
 <body>
     <!-- Preloader -->
@@ -70,7 +77,7 @@
                         <!-- Nav Start -->
                         <div class="classynav">
                             <ul>
-                                <li><a href="https://elohayempire.org/" style="color: gold">Home</a></li>
+                                <li><a href="https://elohayempire.org/" >Home</a></li>
                                 <li><a href="/about-us">About Us</a></li>
                                  <li><a href="#">Our Services</a>
                                     <div class="megamenu">
@@ -136,6 +143,18 @@
         <div class="hero-slides owl-carousel">
             <!-- Single Hero Slide -->
 
+            <div class="single-hero-slide bg-img" style="background-image: url(img/bg-img/bg2.jpeg);">
+                <div class="container h-100">
+                    <div class="row h-100 align-items-center">
+                        <div class="col-12">
+                            <div class="hero-slides-content">
+                                <h2 data-animation="fadeInUp" data-delay="100ms">Construction</h2>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
              <div class="single-hero-slide bg-img" style="background-image: url(img/bg-img/bg1.jpeg);">
                 <div class="container h-100">
                     <div class="row h-100 align-items-center">
@@ -148,17 +167,7 @@
                 </div>
             </div>
 
-             <div class="single-hero-slide bg-img" style="background-image: url(img/bg-img/bg2.jpeg);">
-                <div class="container h-100">
-                    <div class="row h-100 align-items-center">
-                        <div class="col-12">
-                            <div class="hero-slides-content">
-                                <h2 data-animation="fadeInUp" data-delay="100ms">Construction</h2>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+             
 
 
             <div class="single-hero-slide bg-img" style="background-image: url(img/bg-img/road.jpg);">
