--- a/elements.html
+++ b/elements.html
@@ -67,12 +67,12 @@
                             <div class="cross-wrap"><span class="top"></span><span class="bottom"></span></div>
                         </div>
 
-                        <!-- Nav Start -->
+                         <!-- Nav Start -->
                         <div class="classynav">
                             <ul>
-                                <li><a href="https://elohayempire.org/">Home</a></li>
+                                <li><a href="https://elohayempire.org/" >Home</a></li>
                                 <li><a href="/about-us">About Us</a></li>
-                                 <li><a href="#">Services</a>
+                                 <li><a href="#">Our Services</a>
                                     <div class="megamenu">
                                          <ul class="single-mega cn-col-4">
                                             <li class="title">CONSTRUCTIONS</li>
@@ -105,10 +105,9 @@
                                         </ul>
                                     </div>
                                 </li>
-                                
-                                <li><a href="/expertise">Our Expertise</a></li>
+                                <li><a href="/volunteer">Get Involved</a></li>
                                 <li><a href="/blog">Blog</a></li>
-                                <li><a href="#">E-Book</a></li>
+                                 <li><a href="https://book.elohayempire.org/">E-Book</a></li>
 
                                
                                 <li><a href="/contact">Contact</a></li>
