--- a/listings.html
+++ b/listings.html
@@ -76,9 +76,9 @@ a:hover {
                        <!-- Nav Start -->
                         <div class="classynav">
                             <ul>
-                                <li><a href="https://elohayempire.org/">Home</a></li>
+                                <li><a href="https://elohayempire.org/" >Home</a></li>
                                 <li><a href="/about-us">About Us</a></li>
-                                 <li><a href="#">Services</a>
+                                 <li><a href="#">Our Services</a>
                                     <div class="megamenu">
                                          <ul class="single-mega cn-col-4">
                                             <li class="title">CONSTRUCTIONS</li>
@@ -111,10 +111,10 @@ a:hover {
                                         </ul>
                                     </div>
                                 </li>
-                                
-                                <li><a href="/expertise">Our Expertise</a></li>
+                                <li><a href="/volunteer">Get Involved</a></li>
                                 <li><a href="/blog">Blog</a></li>
                                  <li><a href="https://book.elohayempire.org/">E-Book</a></li>
+
                                
                                 <li><a href="/contact">Contact</a></li>
                             </ul>
